# AWSC-CERTIFICATE-AUTOMATION

./: .gitignore  README.md  app.py  build.bat  credentials.toml.example  install.bat  main.py  package-lock.json  pyproject.toml  requirements.txt  run.bat
.kiro/agents/: prompt-router.md
.kiro/hooks/: auto-route-prompt.kiro.hook  lint-python-on-save.kiro.hook  review-spec-before-task.kiro.hook  run-tests-on-save.kiro.hook  secrets-guard.kiro.hook  type-check-on-save.kiro.hook  verify-after-task.kiro.hook
.kiro/specs/certificate-generation/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/csv-email-delivery/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/streamlit-ui-app/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: deployment-guide.md  email-security.md  project-standards.md  streamlit-patterns.md  testing-guide.md
.streamlit/: config.toml  secrets.toml.example
sample/: attendees_sample.csv  attendees_sample.xlsx  ~$attendees_sample.xlsx
tests/: __init__.py  conftest.py  test_certificate_generator.py  test_csv_parser.py  test_email_sender.py  test_image_processor.py
utils/: __init__.py  certificate_generator.py  csv_parser.py  email_sender.py  exceptions.py  font_config.py  font_downloader.py  image_processor.py  models.py  pdf_processor.py
