[project]
name = "certflow"
version = "2.0.0"
description = "Bulk certificate generator and email sender — cross-platform"
requires-python = ">=3.11"
dependencies = [
    "flet==0.25.2",
    "Pillow==10.4.0",
    "PyMuPDF==1.24.9",
    "reportlab==4.2.2",
    "openpyxl==3.1.5",
]

[tool.flet]
module = "main"
name = "CertFlow"
assets = ["assets"]
product = "CertFlow"
org = "com.certflow"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
