[project]
name = "awsc-global-project"
version = "2.0.0"
description = "AWSC GLOBAL PROJECT - Automated Certificate Generator and Delivery System"
requires-python = ">=3.11"

[tool.flet]
module = "main"
name = "CertFlow"
assets = ["assets"]
product = "CertFlow"
org = "com.certflow"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
